# localflow

./: .gitignore  CLAUDE.md  LICENSE  README.md  SESSION.md  pyproject.toml  setup.sh
.claude/commands/: end.md  start.md
config/: default.yaml
knowledge-base/: README.md  architecture.md  model-choices.md  polish-latency.md  research-kickoff-2026-04-21.md
localflow/: app.py
localflow/core/: capture.py  config.py  hotkey.py  overlay.py
localflow/core/inject/: linux_x11.py
localflow/core/polish/: dictionary.py  llamacpp.py
localflow/core/stt/: dummy.py  moonshine_onnx.py
scripts/: download_models.py
