[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "localflow"
version = "0.0.1"
description = "Fully-local, cross-platform AI voice dictation. Open-source clone of Wispr Flow."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Sidharth N" }]
keywords = ["dictation", "speech-to-text", "whisper", "moonshine", "local-ai", "privacy"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "numpy>=1.24",
    "sounddevice>=0.4.6",
    "pynput>=1.7",
    "pyperclip>=1.8",
    "PyYAML>=6.0",
    "click>=8.1",
]

[project.optional-dependencies]
# Linux + NVIDIA CUDA
linux-gpu = [
    "onnxruntime-gpu>=1.18",
    "llama-cpp-python>=0.3",
]
# Linux CPU-only
linux-cpu = [
    "onnxruntime>=1.18",
    "llama-cpp-python>=0.3",
]
# macOS (Apple Silicon)
mac = [
    "onnxruntime>=1.18",
    "mlx>=0.20",
    "mlx-lm>=0.20",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
localflow = "localflow.app:main"

[project.urls]
Homepage = "https://github.com/sidharth-n/localflow"
Repository = "https://github.com/sidharth-n/localflow"
Issues = "https://github.com/sidharth-n/localflow/issues"

[tool.hatch.build.targets.wheel]
packages = ["localflow"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
